force-app/main/default/objects/Quote/fields/Changed__c.field-meta.xml
<CustomField>
    <fullName>Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Changed</label>
    <type>Checkbox</type>
</CustomField>