force-app/main/default/objects/Quote/fields/Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Create_Date__c</fullName>
    <label>Create_Date</label>
    <type>DateTime</type>
</CustomField>