force-app/main/default/objects/Quote/fields/Discount_Standard__c.field-meta.xml
<CustomField>
    <fullName>Discount_Standard__c</fullName>
    <label>Discount Standard</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>