force-app/main/default/objects/Quote/fields/Is_CMS__c.field-meta.xml
<CustomField>
    <fullName>Is_CMS__c</fullName>
    <formula>Opportunity.Is_CMS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is CMS</label>
    <type>Checkbox</type>
</CustomField>