force-app/main/default/objects/Quote/fields/Limit_Product_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Limit_Product_Promotion__c</fullName>
    <label>Limit Product Promotion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>