force-app/main/default/objects/Quote/fields/Log_History_Edit_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Log_History_Edit_Promotion__c</fullName>
    <label>Log History Edit Promotion Old</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>