force-app/main/default/objects/Quote/fields/Number_Edit__c.field-meta.xml
<CustomField>
    <fullName>Number_Edit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number Edit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>