force-app/main/default/objects/Quote/fields/Object_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Object_Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Object Promotion</label>
    <referenceTo>Object_Promotion__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>