force-app/main/default/objects/Quote/fields/Opty_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Opty_Record_Type__c</fullName>
    <formula>Opportunity.RecordType.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opty Record Type</label>
    <type>Text</type>
</CustomField>