force-app/main/default/objects/Quote/fields/Out_Limit_Approval__c.field-meta.xml
<CustomField>
    <fullName>Out_Limit_Approval__c</fullName>
    <formula>(Discount_Amount__c +  Voucher_Amount__c ) &gt; ( Discount_Standard__c +  Voucher_Standard__c +  Limit_Product_Promotion__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Out Limit Approval</label>
    <type>Checkbox</type>
</CustomField>