force-app/main/default/objects/Quote/fields/Quote_No__c.field-meta.xml
<CustomField>
    <fullName>Quote_No__c</fullName>
    <label>Quote No</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>