force-app/main/default/objects/Quote/fields/Second_Payment__c.field-meta.xml
<CustomField>
    <fullName>Second_Payment__c</fullName>
    <label>Second Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>