force-app/main/default/objects/Quote/fields/Third_Payment__c.field-meta.xml
<CustomField>
    <fullName>Third_Payment__c</fullName>
    <label>Third_Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>