force-app/main/default/objects/Quote/fields/Total_Origin__c.field-meta.xml
<CustomField>
    <fullName>Total_Origin__c</fullName>
    <label>Total Origin</label>
    <summarizedField>QuoteLineItem.Origin_Amount__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>