force-app/main/default/objects/Quote/fields/Transport_Location__c.field-meta.xml
<CustomField>
    <fullName>Transport_Location__c</fullName>
    <label>Transport Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Urban Area</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>