force-app/main/default/objects/Quote/fields/Voucher_Standard__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Standard__c</fullName>
    <formula>Promotion_Item__r.Voucher_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voucher Standard</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>