force-app/main/default/objects/Quote/recordTypes/Sales_Bike.recordType-meta.xml
<RecordType>
    <fullName>Sales_Bike</fullName>
    <active>true</active>
    <label>Sales Bike</label>
</RecordType>