force-app/main/default/objects/Quote/recordTypes/Trade_in.recordType-meta.xml
<RecordType>
    <fullName>Trade_in</fullName>
    <active>true</active>
    <label>Trade-in</label>
</RecordType>