force-app/main/default/objects/Quote/listViews/All_Quotes_HN.listView-meta.xml
<ListView>
    <fullName>All_Quotes_HN</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>Quote_Number__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <columns>CreatedBy</columns>
    <columns>Changed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Quote_Number__c</field>
        <operation>contains</operation>
        <value>-HN-</value>
    </filters>
    <label>All Quotes HN</label>
    <sharedTo>
        <group>Group_User_DO_HN</group>
    </sharedTo>
</ListView>