force-app/main/default/objects/Quote/listViews/All_Quotes_SG.listView-meta.xml
<ListView>
    <fullName>All_Quotes_SG</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>Quote_Number__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <columns>CreatedBy</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QUOTE.QUOTENUMBER</field>
        <operation>notContain</operation>
        <value>-HN-</value>
    </filters>
    <label>All Quotes SG</label>
    <sharedTo>
        <group>Group_User_In_DO_HCM</group>
    </sharedTo>
</ListView>